--- a/angular4/src/index.html
+++ b/angular4/src/index.html
@@ -12,10 +12,10 @@
   <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">-->
   <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
   <script src="assets/bootstrap-v3.3.7/js/bootstrap.min.js"></script>
-  <script src="assets/editormd/editormd.js"></script>
   <link href="assets/bootstrap-v3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/font-awesome.min.css" rel="stylesheet">
   <link href="assets/editormd/css/editormd.min.css" rel="stylesheet">
+  <link href="assets/editormd/css/editormd.preview.css" rel="stylesheet"/>
 </head>
 <body>
   <app-root>Loading...</app-root>
